@@ -19,25 +19,14 @@ public class Engine {
     DIRECTION direction;
 
     int timeDelay = 300;
-    private List<List<String>> visibleMap;
-    static int mapWidth = 13;
-    static int mapHeight = 11;
+    private List<List<String>> internalMap;
+    int mapWidth;
+    int mapHeight;
     private Runnable updateMapCallback;
-    private TheMap theMap;
+    private TheMap displayMap;
     private List<Point> body;
 
-    Engine() {
-        visibleMap = IntStream.range(0, mapHeight*mapWidth)
-                .mapToObj(_ -> Arrays.asList("empty"))
-                .toList();
-        direction = DIRECTION.NORTH;
-        body = new LinkedList<>(List.of(new Point(5, 5), new Point(5, 6), new Point(5, 7)));
-        body.forEach(point -> visibleMap.get(point.y()*mapWidth+point.x()).set(0, "up"));
-        addNewFood();
-        createGameLoop();
-    }
-
-    private void createGameLoop() {
+    private void runGameLoop() {
         Thread.ofVirtual().start(() -> {
             while (true) {
                 doTick();
@@ -50,8 +39,8 @@ public class Engine {
         });
     }
 
-    private void setMap(Point head, DIRECTION direction) {
-        visibleMap.get(head.y()*mapWidth+head.x()).set(0, direction.getCode());
+    private void setMapPoint(Point head, DIRECTION direction) {
+        internalMap.get(head.y() * mapWidth + head.x()).set(0, direction.getCode());
     }
 
     public static Engine getInstance() {
@@ -69,24 +58,23 @@ public class Engine {
             case D -> direction = DIRECTION.EAST;
             default -> System.out.println("Unknown key");
         }
-        System.out.println(direction);
     }
 
-    private void doTick(){
-        if (updateMapCallback!=null) {
-            var newHead = body.getFirst().move(direction.getDirection());
+    private void doTick() {
+        if (updateMapCallback != null) {
+            var newHead = move(body.getFirst(), direction.getDirection());
             var last = body.removeLast();
-            detectCollision(newHead,visibleMap);
+            detectCollision(newHead, internalMap);
             body.addFirst(newHead);
-            visibleMap.get(last.y()*mapWidth+last.x()).set(0, "empty");
-            visibleMap.get(newHead.y()*mapWidth+newHead.x()).set(0, direction.getCode());
-            theMap.setAllTiles(visibleMap);
+            internalMap.get(last.y() * mapWidth + last.x()).set(0, "empty");
+            internalMap.get(newHead.y() * mapWidth + newHead.x()).set(0, direction.getCode());
+            displayMap.setAllTiles(internalMap);
             updateMapCallback.run();
         }
     }
 
     private void detectCollision(Point newHead, List<List<String>> visibleMap) {
-        var value = visibleMap.get(newHead.y()*mapWidth+newHead.x()).get(0);
+        var value = visibleMap.get(newHead.y() * mapWidth + newHead.x()).getFirst();
         if (value.equals("food")) {
             increaseLength();
             addNewFood();
@@ -96,9 +84,9 @@ public class Engine {
     }
 
     private void addNewFood() {
-        var free_tiles = visibleMap.size() - body.size();
-        visibleMap.stream()
-                .filter(list -> list.get(0).equals("empty"))
+        var free_tiles = internalMap.size() - body.size();
+        internalMap.stream()
+                .filter(list -> list.getFirst().equals("empty"))
                 .skip(new java.util.Random().nextInt(free_tiles))
                 .findFirst()
                 .ifPresent(list -> list.set(0, "food"));
@@ -106,7 +94,7 @@ public class Engine {
     }
 
     private void gameOver() {
-        System.out.println(ANSI_RED + "Game over"+ ANSI_RESET);
+        System.out.println(ANSI_RED + "Game over" + ANSI_RESET);
     }
 
     private void increaseLength() {
@@ -114,48 +102,36 @@ public class Engine {
         body.add(body.getLast());
     }
 
+    public TheMap initializeAndCreateMap(int mapWidth, int mapHeight, int tileWidth, int tileHeight, Runnable updateMap) {
+        this.mapWidth = mapWidth;
+        this.mapHeight = mapHeight;
+        displayMap = new TheMap(mapWidth, mapHeight, tileWidth, tileHeight);
+        setUpGame();
+        displayMap.setAllTiles(internalMap);
+        setUpdateCallBack(updateMap);
+        return displayMap;
+    }
 
-    public TheMap createMap() {
-       theMap = new TheMap(mapWidth,mapHeight, 50, 30);
-       theMap.setAllTiles(visibleMap);
-       return theMap;
+    public void setUpGame() {
+        internalMap = IntStream.range(0, mapHeight * mapWidth)
+                .mapToObj(_ -> Arrays.asList("empty"))
+                .toList();
+        direction = DIRECTION.NORTH;
+        body = new LinkedList<>(List.of(new Point(5, 5), new Point(5, 6), new Point(5, 7)));
+        body.forEach(point -> internalMap.get(point.y() * mapWidth + point.x()).set(0, "up"));
+        addNewFood();
+        runGameLoop();
     }
 
     public void setUpdateCallBack(Runnable updateMap) {
         updateMapCallback = updateMap;
     }
-}
 
-enum DIRECTION {
-
-    NORTH("up", new Point(0, -1)),
-    EAST("right", new Point(1, 0)),
-    SOUTH("down", new Point(0, 1)),
-    WEST("left", new Point(-1, 0));
-
-   private final String code;
-    private final Point direction;
-
-    DIRECTION(String code, Point direction) {
-        this.code = code;
-        this.direction = direction;
-    }
-
-    public String getCode() {
-        return code;
-    }
-
-    public Point getDirection() {
-        return direction;
-    }
-}
-
-record Point(int x, int y) {
-
-    Point move(Point direction) {
-        var newX = x + direction.x<0 ? Engine.mapWidth-1 : (x + direction.x>Engine.mapWidth-1 ? 0 : x + direction.x);
-        var newY = y + direction.y<0 ? Engine.mapHeight-1 : (y + direction.y>Engine.mapHeight-1 ? 0 : y + direction.y);
+    public Point move(Point p1, Point p2) {
+        var newX = p1.x() + p2.x() < 0 ? mapWidth - 1 : (p1.x() + p2.x() > mapWidth - 1 ? 0 : p1.x() + p2.x());
+        var newY = p1.y() + p2.y() < 0 ? mapHeight - 1 : (p1.y() + p2.y() > mapHeight - 1 ? 0 : p1.y() + p2.y());
         return new Point(newX, newY);
     }
 
 }
+
